tests/typing/pass/storageread1.act
contract Pass

constructor()

creates

    uint x := 0
    uint y := 2

transition g() : uint256

iff in range uint256

    x + y

storage

    // TODO: remove this hack once bug #81 is fixed...
    x := x
    y := y

returns x + y
