tests/typing/fail/case-fail1.act
contract C

constructor()

creates
   uint x := 0
	
transition bar(uint z)

iff
   inRange(uint, z + 1)

case z == 0:

updates
  x := z

case z >= 2:

updates
  x := z + 1